Fix bug in Post where a very long link would not wrap and break the page flow.

--- a/src/client/scss/components/_Post.scss
+++ b/src/client/scss/components/_Post.scss
@@ -100,6 +100,7 @@
 	}
 	&__text {
 		font-size: 1rem;
+		word-break: break-word;
 	}
 	&__text-link {
 		color: $accent-pink;
